@@ -1,5 +1,6 @@
 # Generated by roxygen2: do not edit by hand
 
+export(RLumShinyAddin)
 export(app_RLum)
 export(jscolorInput)
 export(popover)
@@ -7,3 +8,5 @@ export(tooltip)
 import(Luminescence)
 import(googleVis)
 import(shiny)
+import(shinydashboard)
+importFrom(utils,citation)
