@@ -1,0 +1,4 @@
+Name: RLumShiny dashboard
+Description: RLumShiny dashboard
+Binding: RLumShinyAddin
+Interactive: true
