@@ -1,0 +1,12 @@
+% Generated by roxygen2: do not edit by hand
+% Please edit documentation in R/addin.R
+\name{RLumShinyAddin}
+\alias{RLumShinyAddin}
+\title{RLumShiny Dashboard Addin}
+\usage{
+RLumShinyAddin()
+}
+\description{
+RLumShiny dashboard
+}
+
